[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://PixelIntv-OPxd.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.109804, 0.121569, 0.141176, 1 )

[sub_resource type="DynamicFont" id=2]
size = 41
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 17
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -1.0
margin_right = 2.0
margin_bottom = -1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenu" type="PopupMenu" parent="."]
visible = true
margin_left = 383.0
margin_top = 163.0
margin_right = 654.0
margin_bottom = 386.0
custom_styles/panel = SubResource( 9 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -68.0
margin_top = -77.0
margin_right = 65.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupMenu/CenterContainer"]
margin_left = 115.0
margin_top = 101.0
margin_right = 288.0
margin_bottom = 273.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="PopupMenu/CenterContainer/VBoxContainer"]
margin_right = 173.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
text = "PAUSED"
align = 1
valign = 1

[node name="Control" type="Control" parent="PopupMenu/CenterContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 173.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeBtn" type="Button" parent="PopupMenu/CenterContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 173.0
margin_bottom = 97.0
rect_min_size = Vector2( 22, 22 )
custom_fonts/font = SubResource( 4 )
text = "Voltar ao jogo"

[node name="QuitBtn" type="Button" parent="PopupMenu/CenterContainer/VBoxContainer"]
margin_top = 107.0
margin_right = 173.0
margin_bottom = 135.0
rect_min_size = Vector2( 22, 22 )
custom_fonts/font = SubResource( 6 )
text = "Sair"

[node name="VoltarMenuBtn" type="Button" parent="PopupMenu/CenterContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 173.0
margin_bottom = 172.0
rect_min_size = Vector2( 22, 22 )
rect_pivot_offset = Vector2( 60, 0 )
custom_fonts/font = SubResource( 8 )
text = "Voltar ao menu"

[connection signal="pressed" from="PopupMenu/CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="PopupMenu/CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
[connection signal="pressed" from="PopupMenu/CenterContainer/VBoxContainer/VoltarMenuBtn" to="." method="_on_VoltarMenuBtn_pressed"]
